feat: api - delete user
add some swagger validations for user APIs
